약간의 수정

--- a/html/header.html
+++ b/html/header.html
@@ -10,7 +10,15 @@
 
 <body>
     <header>
-        <h2>header 부분 입니다.</h2>
+        <div id="button">
+            <button>HTML</button>
+            <button>CSS</button>
+            <button>JAVASCRIPT</button>
+            <button>JAVA</button>
+            <button>PYTHON</button>
+            <button>MYSQL</button>
+            <button>SPRING</button>
+        </div>
     </header>
 </body>
 
