footer만 표시되는 현상 확인용

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div>
         <main data-include-path="/html/main.html"></main>
     </div>
-    <div>
+    <!-- <div>
         <footer data-include-path="html/footer.html"></footer>
-    </div>
+    </div> -->
 </body>
 
 </html>
