--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <body>
     <div>
-        <header data-include-path="/html/header.html"></header>
+        <header data-include-path="html/header.html"></header>
     </div>
     <div>
-        <main data-include-path="/html/main.html"></main>
+        <main data-include-path="html/main.html"></main>
     </div>
-    <!-- <div>
+    <div>
         <footer data-include-path="html/footer.html"></footer>
-    </div> -->
+    </div>
 </body>
 
 </html>
